# trimrs

./: .gitignore  Cargo.toml  LICENSE  README.md  roadmap.txt
src/: commentfmt.rs  mock_align.rs
src/trimrs/: align.rs  cutadapt_align.rs  cutadapt_encode.rs  encode.rs  lib.rs  output.rs  pipeline.rs  qual_trim.rs  trimming.rs
tests/: cutadapt_align.rs
